# azalyn

./: README.md
providers/: pyproject.toml
providers/ldlc/: __main__.py  exceptions.py  price_fetcher.py  product_page_fetcher.py
providers/top_achat/: __init__.py  __main__.py  exceptions.py  price_fetcher.py  product_page_fetcher.py
